Mudando verificação de emails para o .env

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GLOBAL_ALLOWED_EMAILS=
+PULSE_SERVICE_ALLOWED_EMAILS=
+TELESCOPE_SERVICE_ALLOWED_EMAILS=
+HORIZON_SERVICE_ALLOWED_EMAILS=
+LOG_VIEWER_SERVICE_ALLOWED_EMAILS=
